objects/RMA_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Download__c</fullName>
        <formula>HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Attachment__c,&quot;Download&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>RMA Attachments</relationshipLabel>
        <relationshipName>RMA_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resource_URL__c</fullName>
        <description>This field is used to store the path of the file from any source.</description>
        <label>Resource URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disposition of Wafers</fullName>
                </value>
                <value>
                    <fullName>Technical Validation</fullName>
                </value>
                <value>
                    <fullName>RMA Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RMA Attachment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RMA__c</columns>
        <columns>Description__c</columns>
        <columns>Download__c</columns>
        <columns>Resource_URL__c</columns>
        <columns>Section__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>